# game-engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: ci.yml
src/: Engine.h  main.cpp
src/Runtime/: CMakeLists.txt  Engine.cpp  Engine.h
